<resources>
    <string name="app_name">Meal Management</string>
    <string name="meal_management_app">Meal Management App</string>
    <string name="welcome_to_the">Welcome To The</string>
    <string name="meal_image">Meal Image</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
</resources>