<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/welcomeIntroTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the"
        android:paddingTop="10dp"
        android:textSize="30sp"
        android:textColor="#FF0000"
        android:gravity="center"/>
    <TextView
        android:id="@+id/appNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeIntroTV"
        android:paddingTop="20dp"
        android:textSize="40sp"
        android:textColor="#800000"
        android:text="@string/meal_management_app"
        android:textStyle="bold"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/meal_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/appNameTV"
        android:src="@mipmap/meal_image"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:contentDescription="@string/meal_image" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/meal_image"
        android:layout_marginVertical="20dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:background="#269"
        android:text="@string/login"
        android:textSize="15sp"
        android:gravity="center" />
    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:background="#269"
        android:text="@string/register"
        android:textSize="15sp" />

</RelativeLayout>