<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="20dp"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="#61b943"/>
    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@id/login_tv"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="30dp"
        android:textColorHint="#656c4b"
        android:textColor="#656c4b"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@id/email_et"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="30dp"
        android:textColorHint="#656c4b"
        android:textColor="#656c4b"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_et"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/login"/>


</RelativeLayout>